Add Docker Config

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,8 +18,8 @@ http {
             try_files $uri $uri/ /index.php;
         }
 
-        location = /favicon.ico { access_log off log_not_found off }
-        location = /robots.txt  { access_log off log_not_found off }
+        location = /favicon.ico { access_log off; log_not_found off; } 
+        location = /robots.txt  { access_log off; log_not_found off; }
         access_log /dev/stdout;
         error_log /dev/stderr;
         sendfile off;
